[gd_scene load_steps=4 format=3 uid="uid://cwh7qy66w1ovc"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_b3qgx"]
[ext_resource type="Theme" uid="uid://bprqryutk3og" path="res://resources/theme.tres" id="2_2blpp"]

[sub_resource type="LabelSettings" id="LabelSettings_m17hn"]
font_size = 80

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3qgx")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.5
offset_right = 19.5
grow_horizontal = 2
grow_vertical = 2
split_offset = 400
dragger_visibility = 2

[node name="Label" type="Label" parent="VSplitContainer"]
layout_mode = 2
theme = ExtResource("2_2blpp")
text = "Pong"
label_settings = SubResource("LabelSettings_m17hn")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="SingleButton" type="Button" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_2blpp")
theme_override_font_sizes/font_size = 24
text = "Single Player
"

[node name="MultiButton" type="Button" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_2blpp")
theme_override_font_sizes/font_size = 24
text = "Multi Player"

[node name="QuitButton" type="Button" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_2blpp")
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="VSplitContainer/VBoxContainer/SingleButton" to="." method="_on_single_button_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/MultiButton" to="." method="_on_multi_button_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
